@@ -23,6 +23,7 @@ DFHack future
     - autotrade: adds "(Un)mark All" options to both panes of trade screen.
     - mousequery: several usability improvements.
     - mousequery: show live overlay (in menu area) of what's on the tile under the mouse cursor.
+    - search: workshop profile search added.
 
   Siege engine plugin:
     - engine quality and distance to target now affect accuracy
